--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div id="main">
             <div id="img"><img
-                    src="https://sdmntprsouthcentralus.oaiusercontent.com/files/00000000-3d94-61f7-9482-65d4890fde19/raw?se=2025-09-16T20%3A21%3A56Z&sp=r&sv=2024-08-04&sr=b&scid=425ce444-bc9d-50d4-9169-0f140479a328&skoid=04233560-0ad7-493e-8bf0-1347c317d021&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-16T16%3A07%3A57Z&ske=2025-09-17T16%3A07%3A57Z&sks=b&skv=2024-08-04&sig=HUtwiB0eRK1BEAloTH6gyAsq2gRhURjofK/sEwc8ucA%3D" alt="bolo de aipim"></div>
+                    src="bolo-aipim.webp" alt="bolo de aipim"></div>
             <div id="bt1">
                 <h1>Receita Bolo De Aipim 😋</h1>
             </div>
