--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div id="main">
             <div id="img"><img
-                    src="bolo-aipim.webp" alt="bolo de aipim"></div>
+                    src="boloaipim.jpg" alt="Foto bolo de aipim"></div>
             <div id="bt1">
                 <h1>Receita Bolo De Aipim 😋</h1>
             </div>
@@ -72,16 +72,8 @@
                     <li>A textura do bolo deve ficar cremosa por dentro e com a casquinha crocante.</li>
                 </ol><br>
             </div>
-            <div id="bt7">
-                <h2>Vídeo para facilitar</h2>
-            </div><br>
-            <div id="bt8"><iframe width="560" height="315"
-                    src="https://www.youtube.com/embed/MbeCQrVPz4g?si=n39070lGANKCS706" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
-                <br>
-            </div><br>
+
+
             <div id="bt9"><a href="https://www.tudogostoso.com.br/receita/135626-bolo-de-aipim.html"
                     target="_blank">Site
                     Referencia </a></div>
